<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/peer_name"
        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peer_name_hint"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/peer_host"
        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

    <EditText
        android:id="@+id/inputHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peer_host_hint"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:maxLines="1" />
</LinearLayout>
